--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -9,6 +9,19 @@
 <body class="bg-gray-100 text-gray-800 p-6">
   <h1 class="text-2xl font-bold mb-6">Gestion des Produits</h1>
 
+  <!-- Header -->
+  <header class="bg-white shadow sticky top-0 z-10">
+    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-blue-600">Ma Boutique</h1>
+  
+      <nav class="space-x-4" id="navUser">
+        <span class="text-sm text-gray-700" id="navUsername"></span>
+        <a href="index.html" class="text-sm text-gray-700 hover:text-blue-600">Accueil</a>
+        <button id="logoutBtn" class="text-sm text-red-600 hover:underline">Déconnexion</button>
+      </nav>
+    </div>
+  </header>
+
   <form id="productForm" class="bg-white p-6 rounded shadow-md mb-6">
     <input type="hidden" id="productId" />
     <div class="mb-4">
