--- a/frontend/register.html
+++ b/frontend/register.html
@@ -54,6 +54,6 @@
       animation: fadeIn 0.5s ease-out forwards;
     }
   </style>
-  <script src="./src/js/register.js"></script>
+  <script type="module" crossorigin src="./src/js/register.js" nonce="{{nonce}}"></script>
 </body>
 </html>
