--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard</title>
-  <link href="/src/css/style.css" rel="stylesheet">
+  <link href="/src/css/style.css" rel="stylesheet" />
 </head>
-<body class="bg-gray-100 text-gray-800 p-6">
-  <h1 class="text-2xl font-bold mb-6">Gestion des Produits</h1>
+<body class="bg-gray-100 text-gray-800">
 
-  <form id="productForm" class="bg-white p-6 rounded shadow-md mb-6">
-    <input type="hidden" id="productId" />
-    <div class="mb-4">
-      <label for="name" class="block font-semibold">Nom</label>
-      <input type="text" id="name" class="w-full border px-3 py-2 rounded" required />
-    </div>
-    <div class="mb-4">
-      <label for="description" class="block font-semibold">Description</label>
-      <textarea id="description" class="w-full border px-3 py-2 rounded" required></textarea>
-    </div>
-    <div class="mb-4">
-      <label for="price" class="block font-semibold">Prix (€)</label>
-      <input type="number" id="price" class="w-full border px-3 py-2 rounded" required step="0.01" />
-    </div>
-    <div class="mb-4">
-      <label for="category" class="block font-semibold">Catégorie</label>
-      <input type="text" id="category" class="w-full border px-3 py-2 rounded" required />
-    </div>
-    <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Enregistrer</button>
-  </form>
+  <!-- 🧭 NAVBAR -->
+  <header class="bg-white shadow p-4 mb-6 flex justify-between items-center">
+    <h1 class="text-xl font-bold text-blue-600">Dashboard</h1>
+    <nav class="flex gap-3 items-center">
+      <span id="welcomeUser" class="text-sm text-gray-700">Bienvenue</span>
+      <a href="/" id="goShopBtn" class="text-sm bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">🏪 Aller à la boutique</a>
+      <button id="logoutBtn" class="text-sm bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600">🚪 Déconnexion</button>
+    </nav>
+  </header>
 
-  <div id="productList" class="space-y-4"></div>
+  <!-- 🔧 FORMULAIRE DE GESTION -->
+  <main class="p-6">
+    <h2 class="text-2xl font-bold mb-6">Gestion des Produits</h2>
 
-  <script type="module" src="./src/js/dashboard.js"></script>
+    <form id="productForm" class="bg-white p-6 rounded shadow-md mb-6">
+      <input type="hidden" id="productId" />
+      <div class="mb-4">
+        <label for="name" class="block font-semibold">Nom</label>
+        <input type="text" id="name" class="w-full border px-3 py-2 rounded" required />
+      </div>
+      <div class="mb-4">
+        <label for="description" class="block font-semibold">Description</label>
+        <textarea id="description" class="w-full border px-3 py-2 rounded" required></textarea>
+      </div>
+      <div class="mb-4">
+        <label for="price" class="block font-semibold">Prix (€)</label>
+        <input type="number" id="price" class="w-full border px-3 py-2 rounded" required step="0.01" />
+      </div>
+      <div class="mb-4">
+        <label for="category" class="block font-semibold">Catégorie</label>
+        <input type="text" id="category" class="w-full border px-3 py-2 rounded" required />
+      </div>
+      <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">📂 Enregistrer</button>
+    </form>
+
+    <div id="productList" class="space-y-4"></div>
+  </main>
+
+  <!-- 📜 JS -->
+  <script type="module" crossorigin src="/src/js/dashboard.js" nonce="{{nonce}}"></script>
 </body>
 </html>
