--- a/frontend/login.html
+++ b/frontend/login.html
@@ -42,6 +42,6 @@
       animation: fadeIn 0.5s ease-out forwards;
     }
   </style>
-  <script src="./src/js/login.js"></script>
+  <script type="module" crossorigin src="./src/js/login.js" nonce="{{nonce}}"></script>
 </body>
 </html>
